objects/Warehouse__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>