objects/Warehouse__c/fields/Loc_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Loc_Occupied__c</fullName>
    <label>Loc Occupied</label>
    <summarizedField>Location__c.Occupied__c</summarizedField>
    <summaryForeignKey>Location__c.Warehouse__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>