objects/Warehouse__c/fields/Maximum_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Capacity__c</fullName>
    <label>Maximum Capacity</label>
    <summarizedField>Location__c.Maximum_Capacity__c</summarizedField>
    <summaryForeignKey>Location__c.Warehouse__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>