objects/Warehouse__c/fields/Occupied__c.field-meta.xml
<CustomField>
    <fullName>Occupied__c</fullName>
    <label>Occupied</label>
    <summarizedField>Inventory__c.In_Hand_Quantity__c</summarizedField>
    <summaryForeignKey>Inventory__c.Warehouse__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>