objects/Warehouse__c/fields/Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>Storage_Type__c</fullName>
    <label>Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Define Types</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>