objects/Warehouse__c/fields/Warehouse_Update__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Update__c</fullName>
    <label>Warehouse Update</label>
    <type>TextArea</type>
</CustomField>