objects/Warehouse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Warehouse_Update__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>